--- a/src/app/resource-quotas/components/resource-quotas/resource-quotas.component.html
+++ b/src/app/resource-quotas/components/resource-quotas/resource-quotas.component.html
@@ -29,6 +29,7 @@
               [placeholder]="'RESOURCE_QUOTAS_PAGE.MAX' | translate"
               [ngModel]="resourceQuotas[i].maximum"
               (ngModelChange)="onMaxChange(i, +$event)"
+              required
             />
           </mat-form-field>
         </td>
