--- a/src/app/vm/vm-creation/postdeployment/postdeployment.component.html
+++ b/src/app/vm/vm-creation/postdeployment/postdeployment.component.html
@@ -3,28 +3,16 @@
   <h4 class="truncate">
     <b>{{ 'VM_POST_ACTION.VM' | translate }}: </b> {{ vm.displayname }}
   </h4>
-  <h4 *ngIf="!vm.isoid && vm.password">
-    <cs-vm-password [vm]="vm"></cs-vm-password>
-  </h4>
-  <h4 *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.VM_IP' | translate }}:</b> {{ vm.nic[0].ipaddress }}</h4>
-  <h4 *ngIf="isHttpAuthMode(vm) && getUrlLogin(vm)"><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}</b>
-    {{ getUrlLogin(vm) }}
-  </h4>
-  <h4 *ngIf="isHttpAuthMode(vm) && getUrlPassword(vm)">
-    <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}</b> {{ getUrlPassword(vm) }}
+  <h4 *ngIf="!vm.isoid && vm.password"><cs-vm-password [vm]="vm"></cs-vm-password></h4>
+  <h4 *ngIf="vm.nic[0]?.ipaddress">
+    <b>{{ 'VM_POST_ACTION.VM_IP' | translate }}:</b> {{ vm.nic[0].ipaddress }}
   </h4>
   <div class="mat-dialog-actions">
-        <span *ngFor="let act of actions">
-        <button
-          mat-button color="primary"
-          *ngIf="!act.hidden(vm)"
-          (click)="act.activate(vm)"
-        >{{ act.name | translate }}</button>
-        </span>
-    <button
-      mat-button color="primary"
-      (click)="dialogRef.close()"
-    >{{ 'COMMON.CLOSE' | translate }}
+    <button *ngIf="isVmRunning(vm)" mat-button color="primary" (click)="accessVm()">
+      {{ 'VM_PAGE.COMMANDS.VM_ACCESS' | translate }}
+    </button>
+    <button mat-button color="primary" (click)="dialogRef.close()">
+      {{ 'COMMON.CLOSE' | translate }}
     </button>
   </div>
 </div>
