--- a/src/app/shared/components/vm-statistics/vm-statistics.component.html
+++ b/src/app/shared/components/vm-statistics/vm-statistics.component.html
@@ -35,7 +35,7 @@
       mat-raised-button
       (click)="requestResources()"
     >
-      {{ 'RESOURCE_QUOTAS_PAGE.REQUEST.REQUEST_RESOURCES' | translate }}
+      {{ 'RESOURCE_QUOTAS_PAGE.REQUEST.REQUEST_RESOURCES_BUTTON' | translate }}
     </button>
     <div class="stat-list-container">
       <mat-card *ngFor="let stat of statsList" class="stat-card-md">
