--- a/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.html
+++ b/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.html
@@ -1,15 +1,13 @@
 <div class="top-row">
-  <h4 class="dialog-select-header">
-    {{ 'VM_PAGE.VM_CREATION.SERVICE_OFFERING' | translate }}
-  </h4>
+  <h4 class="dialog-select-header">{{ 'VM_PAGE.VM_CREATION.SERVICE_OFFERING' | translate }}</h4>
 
-  <button type="button" mat-button (click)="onClick()">
+  <button type="button" mat-button [disabled]="!serviceOffering" (click)="onClick()">
     {{ 'COMMON.SELECT' | translate }}
   </button>
 </div>
 
 <div class="mat-form-field-wrapper">
-  <ng-container *ngIf="serviceOffering; then offeringNameBlock else nameStub"></ng-container>
+  <ng-container *ngIf="serviceOffering; then offeringNameBlock; else nameStub"></ng-container>
   <ng-template #offeringNameBlock>
     <span class="service-offering-info truncate" [matTooltip]="offeringName | async">
       {{ offeringName | async }}
@@ -18,7 +16,5 @@
       {{ 'ERRORS.COMPUTE_OFFERING.RESOURCE_LIMIT_EXCEEDED' | translate }}
     </cs-error-message>
   </ng-template>
-  <ng-template #nameStub>
-    {{ 'VM_PAGE.VM_CREATION.NO_OFFERINGS' | translate }}
-  </ng-template>
+  <ng-template #nameStub> {{ 'VM_PAGE.VM_CREATION.NO_OFFERINGS' | translate }} </ng-template>
 </div>
