--- a/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
@@ -1,8 +1,5 @@
 <div class="filter-wrapper">
-  <mat-button-toggle-group
-    [value]="viewMode"
-    (change)="onViewModeChange($event.value)"
-  >
+  <mat-button-toggle-group [value]="viewMode" (change)="onViewModeChange($event.value)">
     <mat-button-toggle [value]="snapshotPageViewMode.Volume">
       {{ 'SNAPSHOT_PAGE.FILTERS.VOLUME' | translate }}
     </mat-button-toggle>
@@ -18,10 +15,8 @@
       [ngModel]="selectedAccounts"
       (selectionChange)="selectedAccountsChange.emit($event.value)"
     >
-      <mat-option
-        *ngFor="let account of accounts"
-        [value]="account.name"
-      >{{ account.fullDomain }}{{ account.name }}
+      <mat-option *ngFor="let account of accounts" [value]="account.name"
+        >{{ account.fullDomain }}{{ account.name }}
       </mat-option>
     </mat-select>
   </mat-form-field>
@@ -33,9 +28,7 @@
       [ngModel]="selectedTypes"
       (selectionChange)="selectedTypesChange.emit($event.value)"
     >
-      <mat-option *ngFor="let t of types" [value]="t.type">
-        {{ t.name | translate }}
-      </mat-option>
+      <mat-option *ngFor="let t of types" [value]="t.type"> {{ t.name | translate }} </mat-option>
     </mat-select>
   </mat-form-field>
 
@@ -46,9 +39,21 @@
       [ngModel]="selectedVms"
       (selectionChange)="selectedVmsChange.emit($event.value)"
     >
-      <mat-option *ngFor="let vm of vms" [value]="vm.id">
-        {{ vm.displayname }}
-      </mat-option>
+      <mat-option *ngFor="let vm of vms" [value]="vm.id"> {{ vm.displayname }} </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field *ngIf="viewMode === snapshotPageViewMode.Volume">
+    <mat-select
+      multiple="true"
+      [placeholder]="'SNAPSHOT_PAGE.FILTERS.SELECT_VMS' | translate"
+      [ngModel]="selectedVmIds"
+      (selectionChange)="selectedVolumeVmsChange.emit($event.value)"
+    >
+      <!--<mat-option [value]="'withoutVm'">-->
+      <!--{{ 'SNAPSHOT_PAGE.FILTERS.WITHOUT_VM' | translate }}-->
+      <!--</mat-option>-->
+      <mat-option *ngFor="let vm of vms" [value]="vm.id"> {{ vm.displayname }} </mat-option>
     </mat-select>
   </mat-form-field>
 
@@ -61,9 +66,7 @@
       (selectionChange)="selectedGroupingsChange.emit($event.value)"
     >
       <ng-container *ngFor="let g of availableGroupings">
-        <mat-option *ngIf="!(g.enabled())" [value]="g">
-          {{ g.label | translate }}
-        </mat-option>
+        <mat-option *ngIf="!g.enabled()" [value]="g"> {{ g.label | translate }} </mat-option>
       </ng-container>
     </cs-draggable-select>
   </mat-form-field>
@@ -81,8 +84,5 @@
 </div>
 
 <div class="filter-wrapper" *ngIf="viewMode === snapshotPageViewMode.Volume">
-  <cs-search
-    [ngModel]="query"
-    (ngModelChange)="queryChange.emit($event)"
-  ></cs-search>
+  <cs-search [ngModel]="query" (ngModelChange)="queryChange.emit($event)"></cs-search>
 </div>
