fixes after review

--- a/src/app/vm/vm-sidebar/vm-detail/service-offering-details/service-offering-details.component.html
+++ b/src/app/vm/vm-sidebar/vm-detail/service-offering-details/service-offering-details.component.html
@@ -113,7 +113,7 @@
     </div>
 
     <div class="row">
-      <div class="warning-message" *ngIf="!isOfferingsAvailable">
+      <div class="warning-message" *ngIf="!areOfferingsAvailable">
         {{ 'VM_PAGE.VM_CREATION.NO_OFFERINGS' | translate }}
       </div>
     </div>
