feat(settings): rework settings - display all sections in switcher

--- a/src/app/settings/components/api-settings/api-settings.component.html
+++ b/src/app/settings/components/api-settings/api-settings.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="title-with-icon">
-    <h2 class="settings-section-name">{{ 'SETTINGS.API_CONFIGURATION.TITLE' | translate }}</h2>
+    <h3 class="no-margin">{{ 'SETTINGS.API_CONFIGURATION.REGENERATE_KEYS' | translate }}</h3>
     <button
       mat-icon-button
       type="button"
