--- a/src/app/settings/components/api-settings/api-settings.component.scss
+++ b/src/app/settings/components/api-settings/api-settings.component.scss
@@ -1,14 +1,15 @@
 .title-with-icon {
   display: flex;
-  width: 280px;
+  max-width: 500px;
+  margin-left: 20px;
 
   .mat-icon-button {
-    margin-left: auto;
     align-self: center;
   }
 }
 
-cs-input-group, mat-form-field {
+cs-input-group,
+mat-form-field {
   width: 100%;
 }
 
