add 'No vm' option

--- a/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
@@ -40,6 +40,7 @@
         [ngModel]="selectedVolumeVmIds"
         (selectionChange)="selectedVolumeVmsChange.emit($event.value)"
       >
+        <mat-option [value]="'noVm'"> {{ 'SNAPSHOT_PAGE.FILTERS.NO_VM' | translate }} </mat-option>
         <mat-option *ngFor="let vm of vms" [value]="vm.id"> {{ vm.displayname }} </mat-option>
       </mat-select>
     </mat-form-field>
