--- a/src/app/resource-quotas/components/resource-quotas/resource-quotas.component.html
+++ b/src/app/resource-quotas/components/resource-quotas/resource-quotas.component.html
@@ -36,7 +36,7 @@
       </tr>
     </table>
 
-    <button class="button" mat-button (click)="onUpdate()">
+    <button class="button" mat-button (click)="onUpdate()" [disabled]="!isUpdateButtonActive">
       {{ 'COMMON.UPDATE' | translate }}
     </button>
   </div>
