feat(domain): use domain path instead of domain name

--- a/src/app/account/account/card-item/account-card-item.component.html
+++ b/src/app/account/account/card-item/account-card-item.component.html
@@ -29,7 +29,7 @@
       {{ 'ACCOUNT_PAGE.CARD.ROLE_TYPE' | translate }}: {{ item.roletype }}
     </div>
     <div class="entity-card-data-line">
-      {{ 'ACCOUNT_PAGE.CARD.DOMAIN' | translate }}: {{ item.domain }}
+      {{ 'ACCOUNT_PAGE.CARD.DOMAIN' | translate }}: {{ item.domainpath || '' }}
     </div>
   </mat-card-content>
 
