--- a/src/app/account/account/row-item/account-row-item.component.html
+++ b/src/app/account/account/row-item/account-row-item.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="entity-list-item-data">
-    {{ 'ACCOUNT_PAGE.CARD.DOMAIN' | translate }}: {{ item.domain }}
+    {{ 'ACCOUNT_PAGE.CARD.DOMAIN' | translate }}: {{ item.domainpath || '' }}
   </div>
 
   <!-- Use visibility to make the element take up space and not broke the layout -->
