--- a/src/app/account/creation-form/account-creation-dialog.component.html
+++ b/src/app/account/creation-form/account-creation-dialog.component.html
@@ -69,7 +69,7 @@
           formControlName="domainid"
         >
           <mat-option *ngFor="let domain of domains" [value]="domain.id">
-            {{ domain.path }}
+            {{ domain.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
