--- a/src/app/support/support-information.component.html
+++ b/src/app/support/support-information.component.html
@@ -1,9 +1,11 @@
-<mat-accordion *ngIf="isShow">
-  <mat-expansion-panel>
-    <mat-expansion-panel-header class="panel-wrapper">
-      <mat-panel-title> {{ 'ERRORS.SUPPORT_INFORMATION' | translate }} </mat-panel-title>
-    </mat-expansion-panel-header>
+<div class="panel-wrapper">
+  <mat-accordion *ngIf="isShow">
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> {{ 'ERRORS.SUPPORT_INFORMATION' | translate }} </mat-panel-title>
+      </mat-expansion-panel-header>
 
-    <div [innerHTML]="supportInformation"></div>
-  </mat-expansion-panel>
-</mat-accordion>
+      <div [innerHTML]="supportInformation"></div>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
