feat(vm-creation): add a capability to copy API Log in case of error during VM creation

--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -2,14 +2,15 @@
   <mat-dialog-content>
     <div class="overlay message">
       <div class="overlay-content">
-        <cs-progress-logger
-          [messages]="loggerStageList"
-        ></cs-progress-logger>
+        <cs-progress-logger [messages]="loggerStageList"></cs-progress-logger>
 
         <mat-progress-bar
           mode="indeterminate"
           [class.progress-hidden]="!deploymentInProgress"
         ></mat-progress-bar>
+
+        <cs-vm-api-log *ngIf="isError"></cs-vm-api-log>
+
         <cs-postdeployment-dialog
           *ngIf="!deploymentInProgress && deployedVm"
           [vm]="deployedVm"
@@ -44,11 +45,12 @@
       novalidate
     >
       <div class="container">
-        <ng-container *ngIf="enoughResources && vmCreationState; then enoughResources else notEnoughResources">
+        <ng-container
+          *ngIf="enoughResources && vmCreationState; then enoughResources; else notEnoughResources"
+        >
         </ng-container>
         <ng-template #enoughResources>
           <mat-tab-group>
-
             <mat-tab [label]="'VM_PAGE.VM_CREATION.GENERAL' | translate">
               <div class="settings-column">
                 <div>
@@ -64,7 +66,7 @@
                       [minlength]="1"
                       pattern="^[\S]{0}.{0,30}[\S]$"
                       required
-                    >
+                    />
                     <mat-hint align="end">
                       <cs-character-count
                         [value]="vmCreationState.displayName"
@@ -82,17 +84,12 @@
                       [ngModel]="vmCreationState.zone"
                       (selectionChange)="zoneChange.emit($event.value)"
                     >
-                      <mat-option *ngFor="let z of zones" [value]="z">
-                        {{ z.name }}
-                      </mat-option>
+                      <mat-option *ngFor="let z of zones" [value]="z"> {{ z.name }} </mat-option>
                     </mat-select>
                   </mat-form-field>
                 </div>
 
-                <div
-                  *ngIf="vmCreationState.zone"
-                  class="dialog-select-wrapper"
-                >
+                <div *ngIf="vmCreationState.zone" class="dialog-select-wrapper">
                   <cs-service-offering-selector
                     name="serviceOffering"
                     [serviceOffering]="vmCreationState.serviceOffering"
@@ -151,7 +148,7 @@
                       [placeholder]="'VM_PAGE.VM_CREATION.HOST_NAME' | translate"
                       pattern="^[a-zA-Z]{0}[a-zA-Z0-9\-]{0,61}[a-zA-Z0-9]$"
                       [maxlength]="maxEntityNameLength"
-                    >
+                    />
                     <mat-hint align="end">
                       <cs-character-count
                         [value]="vmCreationState.name"
@@ -174,11 +171,11 @@
                       [placeholder]="'VM_PAGE.VM_CREATION.NO_GROUP' | translate"
                       [ngModel]="vmCreationState.instanceGroup"
                       (ngModelChange)="changeInstanceGroup($event)"
-                    >
+                    />
                   </mat-form-field>
                   <mat-autocomplete #instanceGroups>
                     <mat-option
-                      *ngFor="let group of (visibleInstanceGroups || instanceGroupList)"
+                      *ngFor="let group of visibleInstanceGroups || instanceGroupList"
                       [value]="group"
                     >
                       {{ group }}
@@ -221,10 +218,8 @@
                     {{ 'VM_PAGE.VM_CREATION.START_VM' | translate }}
                   </mat-checkbox>
                 </div>
-
               </div>
             </mat-tab>
-
           </mat-tab-group>
         </ng-template>
 
@@ -243,13 +238,7 @@
       </div>
 
       <div class="mat-dialog-actions">
-        <button
-          mat-button
-          color="primary"
-          matDialogClose
-          type="button"
-          (click)="cancel.emit()"
-        >
+        <button mat-button color="primary" matDialogClose type="button" (click)="cancel.emit()">
           {{ 'COMMON.CANCEL' | translate }}
         </button>
         <button
